# Course_work_3

./: main.py  pyproject.toml
tests/: conftest.py  test_functions.py
utils/: functions.py
